Fix navbar z-index issue

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,45 +1,43 @@
+@import "./App.scss";
+
 nav {
-    background-color: #1f2833;
-    min-height: 10vh;
-    width: 100%; 
-    position: sticky;
-    bottom: 0;
-    left: 0; 
-    top: 0;
-    z-index: 5; 
+  background-color: $greyish;
+  min-height: 10vh;
+  width: 100%;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  top: 0;
+  z-index: 1001;
 
-    @media(min-width: 700px) {
-         min-height: 100vh;
-         max-width: 7%;  
-    }
-
-
-}
-
-ul {
+  ul {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2.5rem;
     height: 100%;
 
-
-    @media(min-width: 700px) {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
     svg {
-        fill: white;
-        stroke: white;
-        transition: transform 0.5s ease;
-    }
-    
-    li.active svg {
-        fill: #66fcf1;
-        stroke: #66fcf1;
-        transform: scale(1.2);
+      fill: white;
+      stroke: white;
+      transition: transform 0.5s ease;
     }
 
+    li.active svg {
+      fill: $aqua;
+      stroke: $aqua;
+      transform: scale(1.1);
+    }
+  }
+
+  @media (min-width: $tablet) {
+    min-height: 100vh;
+    max-width: 7%;
+
+    ul {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
