--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -13,6 +13,7 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 30px;
     row-gap: 50px;
+    overflow: hidden;
 
     
     @media(min-width: $tablet) {
