--- a/src/styles/Slider.scss
+++ b/src/styles/Slider.scss
@@ -1,7 +1,7 @@
 
 .slider {
     position: fixed;
-    z-index: 9999;
+    z-index: 1000;
     background-color: #66fcf1;
     // inset: 0 0 10vh 0;
     top: 0;
