--- a/src/styles/TextSphere.scss
+++ b/src/styles/TextSphere.scss
@@ -3,8 +3,8 @@
 
 
 .text-shpere { 
-    // width:  ;
-    max-height: 400px;
+    width:  100%;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,5 +33,5 @@
 }
 
 .tagcloud--item:hover {
-    color: grey;
+    color: $greyish;
 }
